# ari

./: .gitignore  LICENSE  README.md  SPEC.md  WORKFLOW_STATE.md  coding-agent.sh  demo.py  doc_extraction_pipeline_overview.md  pdflatex318006.fls  pyproject.toml  remove-coding-artifacts.sh
.opencode/: AGENTS.md  CODING_STANDARDS.md
.opencode/agents/: step-0-define.md  step-1-research.md  step-2-architect.md  step-3-specify.md  step-4-implement.md  step-5a-review-quality.md  step-5b-review-security.md
.pi/: CODING_GUIDELINES.md
.pi/agents/: implementation.md  introspection.md  orientation.md
ari/: classify_work.py  cli_utils.py
ari/db/: database.py  db.py
ari/embeddings/: _embed.py  _model.py  _search.py  rerank.py  search.py
ari/input/: pdf.py
ari/map_selector/: __init__.py  coordinates.py  map_html.py  map_selector.py  webview_wrapper.py
ari/media/: cpt_icon.py
ari/queries/: __init__.py  base.py  derive_params.py  pile_calc.py  pile_report.py  soil_interpretation.py
ari/report/: pile.py  plot.py  report.py  table.py
ari/workflows/: derive_params.py  soil_interpretation.py
ari_tests/: conftest.py  test_classify_work.py  test_utils.py
ari_tests/db/: conftest.py  test_calc_table.py  test_database.py  test_database_generic_methods.py  test_db.py  test_fresh_db.py  test_params_api.py  test_project_cpt_api.py  test_project_table.py  test_soil_profile_api.py  test_table_enum.py
ari_tests/embeddings/: test_search_and_rerank_integration.py  test_search_integration.py
ari_tests/fixtures/: __init__.py  test_workflow_mocks.py  workflow_mocks.py
ari_tests/input/: test_chunk_by_paragraphs.py  test_chunk_pdf_by_paragraphs.py  test_chunk_pdf_by_tokens.py  test_pdf.py  test_pdf_pile_load.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: calculator.baml  calculator_tools.baml  classify_work.baml  classify_workflows.baml  clients.baml  rerank_input_reports.baml
tests/: conftest.py  test_combine_soil_profiles_cpts.py  test_embed_chunks.py  test_embed_query.py  test_mappointselector.py  test_project_table.py
(+53 files in other folders)
