[project]
name = "ari"
version = "0.0.1"
description = ""
authors = [{ name = "Tom Laumen", email = "tom@ari.engineer" }]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "numpy>=2.3.1,<3.0.0",
  "pygef==0.11.1",
  "d-geolib>=2.7.0,<3.0.0",
  "requests>=2.32.5,<3.0.0",
  "baml-py==0.211.2",
  "rapidfuzz>=3.0.0,<4.0.0",
  "prompt-toolkit>=3.0.52,<4.0.0",
  "pyproj>=3.7.2,<4.0.0",
  "python-dotenv>=1.2.1,<2.0.0",
  "pillow>=12.0.0,<13.0.0",
  "pylatex>=1.4.2,<2.0.0",
  "pyside6>=6.0",
  "torch>=2.11,<3.0.0",
  "sentence-transformers[onnx]>=5.4.1,<6.0.0",
  "pymupdf>=1.27.2.3",
]


[dependency-groups]
dev = ["notebook>=7.4.4,<8.0.0", "ruff>=0.15.8", "pytest>=8.4.1,<9.0.0"]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true                              # only used for packages you explicitly route here

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.pytest.ini_options]
markers = [
  "human: require human feedback to run",
  "auto: run automatically",
  "ai: run's llm calls",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
